@@ -13,3 +13,4 @@
   * Added tickit_rectset_get_rect(3)
   * Added tickit_renderbuffer_skiprect(3)
   * Added tickit_renderbuffer_moverect(3)
+  * Added tickit_term_ctlname(3) and tickit_term_lookup_ctl(3)
